# DataArc-SynData-Toolkit

./: .gitignore  README.md  README_zh.md  app.py  pyproject.toml
configs/: eval.yaml  example.yaml  sdg.yaml
docs/: DEPENDENCIES.md  DEPENDENCIES_zh.md
examples/finance/: cfa_demo.jsonl  finance.yaml
examples/mathematics/: math.yaml
examples/medicine/: med.yaml  medqa_demo.jsonl
sdgsystem/: buffer.py  cli.py  parallel.py  pipeline.py  prompts.py
sdgsystem/app/api/: sdg.py
sdgsystem/configs/: config.py  constants.py
sdgsystem/dataset/: dataset.py  process.py
sdgsystem/deepeval/: __init__.py  config.py  evaluator.py
sdgsystem/deepeval/metrics/: __init__.py  correctness.py  format_compliance.py  pairwise.py
sdgsystem/distillation/: base.py  evol_instruct.py  sdg_distill.py  sdg_mm_distill.py  self_instruct.py
sdgsystem/documents/: export.py  load.py  parse.py
sdgsystem/evaluation/: answer_comparison.py  evaluator.py
sdgsystem/generation/: __init__.py  base.py  generator.py  rewriter.py
sdgsystem/huggingface/: crawl.py
sdgsystem/models/: answer_extraction.py  client.py  models.py  usage_counter.py
sdgsystem/models/postprocess/: base.py  majority_voting.py  processor.py
sdgsystem/tasks/: __init__.py  base.py  distill.py  keyword_extractor.py  local.py  task_executor.py  total_executor.py  web.py
sdgsystem/tasks/image/: __init__.py  local.py  web.py
sdgsystem/tasks/text/: __init__.py  distill.py  local.py  web.py
sdgsystem/trainer/: config.py  data_preprocessing.py  launcher.py
sdgsystem/trainer/methods/: grpo.py  sft.py
sdgsystem/translation/: translator.py
sdgsystem/webui/: vite.config.ts
train/verl/trainer/: fsdp_sft_trainer.py
(+11 files in other folders)
